Fix mobile spacing

--- a/hackerstash/static/scss/pages/projects/_show.scss
+++ b/hackerstash/static/scss/pages/projects/_show.scss
@@ -174,7 +174,7 @@
       margin: 0 2rem 0 0;
 
       @include tablet-down {
-        margin-bottom: 2rem;
+        margin: 0 0 2rem 0;
         min-height: 0;
         padding: 0;
       }
